--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,7 +51,7 @@
     flex: 1;
     min-width: 100%;
     min-height: 100vh;
-    padding-bottom: 1rem;
+    margin-top: 1vw;
 }
 
 #grad-main {
